--- a/3d/.godot/editor/editor_layout.cfg
+++ b/3d/.godot/editor/editor_layout.cfg
@@ -13,14 +13,14 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-440
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://imports/block.gltf")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://textures/", "res://scripts/", "res://imports/", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,19 +31,19 @@ open_scenes=PackedStringArray("res://level.tscn", "res://assets/Steve.tscn")
 current_scene="res://level.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/Steve.gd"]
-selected_script="res://scripts/Steve.gd"
-open_help=["Input"]
-script_split_offset=70
+open_scripts=["res://scripts/Camera3D.gd", "res://scripts/Steve.gd"]
+selected_script=""
+open_help=["GeometryInstance3D", "GradientTexture2D", "Input", "MeshInstance3D", "Node3D"]
+script_split_offset=150
 list_split_offset=0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://level.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://level.gdshader"
