--- a/3d/.godot/editor/script_editor_cache.cfg
+++ b/3d/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 48,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 5.0,
+"row": 36,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -21,6 +21,34 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 8,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://btn-title-play.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 53,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://GameOver.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 47,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
