--- a/3d/.godot/editor/editor_layout.cfg
+++ b/3d/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/enemy.gltf")
+dock_filesystem_selected_paths=PackedStringArray("res://coin.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://textures/", "res://scripts/", "res://imports/", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,18 +27,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://level.tscn", "res://assets/Steve.tscn", "res://control.tscn", "res://enemy.tscn", "res://GameOver.tscn")
-current_scene="res://level.tscn"
+open_scenes=PackedStringArray("res://control.tscn", "res://level.tscn", "res://coin.tscn", "res://win.tscn")
+current_scene="res://win.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://btn-title-play.gd", "res://scripts/Camera3D.gd", "res://GameOver.gd", "res://scripts/Steve.gd"]
-selected_script="res://scripts/Steve.gd"
-open_help=["GeometryInstance3D", "GradientTexture2D", "Input", "MeshInstance3D", "Node3D"]
+open_scripts=["res://btn-title-play.gd", "res://scripts/Camera3D.gd", "res://coin.gd", "res://Counter.gd", "res://GameOver.gd", "res://scripts/Steve.gd", "res://Timer.gd", "res://win.gd"]
+selected_script="res://win.gd"
+open_help=["AnimationPlayer", "GeometryInstance3D", "GradientTexture2D", "Input", "MeshInstance3D", "Node", "Node3D", "Object", "SceneTree"]
 script_split_offset=150
 list_split_offset=0
 
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=["res://level.gdshader"]
 split_offset=0
 selected_shader="res://level.gdshader"
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
